01 aukera prezioak ondo

--- a/VirtualMaid/src/main/webapp/EDUKIAK/ESTILOA/orduak.css
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/ESTILOA/orduak.css
@@ -29,13 +29,13 @@ button {
     font-family: "Source Sans Pro", sans-serif;
     color: #222222;
     }
-.gorria{
+.R{
     background-color: #cc3232;
 }
-.laranja{
+.N{
     background-color: #db7b2b;
 }
-.berdea{
+.V{
     background-color: #99c140;
 }
 button:hover {
