--- a/VirtualMaid/src/main/webapp/EDUKIAK/ESTILOA/orduak.css
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/ESTILOA/orduak.css
@@ -8,7 +8,7 @@
     text-align: center;
     justify-content: center;
     }
-button {
+input {
     display: flex;
     margin: 10px 0;
     padding: 1px;
@@ -38,7 +38,7 @@ button {
 .V{
     background-color: #99c140;
 }
-button:hover {
+input:hover {
     background-color: #efefef;
     }
     .container {
