--- a/VirtualMaid/src/main/webapp/EDUKIAK/ESTILOA/gailuak.css
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/ESTILOA/gailuak.css
@@ -8,7 +8,7 @@
     text-align: center;
     justify-content: center;
     }
-input {
+form {
     display: flex;
     margin: 10px 0;
     padding: 1px;
@@ -17,7 +17,7 @@ input {
     color: rgb(0, 0, 0);
     border-radius: 0px;
     cursor: pointer;
-    width: 650px;
+    width: 610px;
     height: 35px;
     margin: 0 auto;
     padding: 5px;
@@ -29,12 +29,33 @@ input {
     font-family: "Source Sans Pro", sans-serif;
     color: #222222;
     }
-input:hover {
+  input {
+    display: flex;
+    margin: 10px 0;
+    padding: 1px;
+    border: none;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    border-radius: 0px;
+    cursor: pointer;
+    width: 510px;
+    height: 35px;
+    margin: 0 auto;
+    padding: 5px;
+    display: table-cell;
+    vertical-align: middle;
+    /* font-weight: bold; */
+    font-size: 55px;
+    font-size: 1rem;
+    font-family: "Source Sans Pro", sans-serif;
+    color: #222222;
+    }
+form:hover {
     background-color: #707070;
     }
 img {
     width: 30px;
-    height: 30px;
+    /* height: 30px; */
     margin-right: 10px;
     border-radius: 5%;
     padding: 0px;
@@ -53,12 +74,18 @@ br {
 table {
     border-collapse: collapse;
     border: 0.7px solid gray;
+    border-spacing: 0.7px;
     background-color: #707070;
-    width: 650px;
+    /* width: 650px; */
     /* height: 130px; */
     }
 
 td {
+    padding: 0.5px;
+    width: auto;
+    background-color: #707070;
+    }
+th {
     padding: 0.5px;
     background-color: #707070;
     }
