--- a/VirtualMaid/src/main/webapp/EDUKIAK/ESTILOA/gailuak2.css
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/ESTILOA/gailuak2.css
@@ -8,6 +8,45 @@
     text-align: center;
     justify-content: center;
     }
+.menuNagusirakoBotoia{
+	
+	background-color: #707070; /* color de fondo */
+	border: none; /* quitar borde */
+	border-radius: 1px; /* redondear bordes */
+	cursor: pointer; /* cursor con forma de mano */
+	/* font-size: 16px; */ /* tamaño de la fuente */
+	width: 100px;
+	height: 25px;
+	float: right; /* alinear a la derecha */
+  	margin-right: 20px; /* margen derecho para separar del borde */
+  	text-align: center;
+  	font-size: 10px;
+  	padding: 0px;
+  	all: initial;
+}
+.menuNagusirakoBotoia:hover{
+	background-color: #ffffff; 
+	border: 1px solid #707070;
+	padding: 0px;
+}
+.menuNagusirakoBotoiaInput{
+	all: initial;
+	background-color: #707070;
+	margin: 2 auto; 
+  	color: white;
+  	padding: 0px;
+  	width: 100px;
+	height: 25px;	
+	font-family: "Source Sans Pro", sans-serif;
+	float: right; /* alinear a la derecha */
+  	margin-right: 20px; /* margen derecho para separar del borde */
+  	text-align: center;
+}
+.menuNagusirakoBotoiaInput:hover{
+	background-color: inherit;	
+	color: black;
+	border: 1px solid #707070;
+}
 form {
     display: flex;
     margin: 10px 0;
