--- a/VirtualMaid/src/main/webapp/EDUKIAK/ESTILOA/orduak.css
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/ESTILOA/orduak.css
@@ -8,6 +8,39 @@
     text-align: center;
     justify-content: center;
     }
+    .menuNagusirakoBotoia{
+	
+	background-color: #707070; /* color de fondo */
+	border: none; /* quitar borde */
+	border-radius: 1px; /* redondear bordes */
+	cursor: pointer; /* cursor con forma de mano */
+	/* font-size: 16px; */ /* tamaño de la fuente */
+	width: 100px;
+	height: 25px;
+	float: right; /* alinear a la derecha */
+  	margin-right: 20px; /* margen derecho para separar del borde */
+  	text-align: center;
+  	font-size: 10px;
+}
+.menuNagusirakoBotoia:hover{
+	background-color: #ffffff; 
+	border: 1px solid #707070;
+}
+.menuNagusirakoBotoiaInput{
+	/* width: 100px;
+	height: 30px; */
+	background-color: inherit;
+	display: inline-block; /* convertir en elemento en línea */
+  	margin: 0 auto; 
+  	color: white;
+  	width: 100px;
+	height: 25px;
+	
+}
+.menuNagusirakoBotoiaInput:hover{
+	background-color: inherit;	
+	color: black;
+}
 input {
     display: flex;
     margin: 10px 0;
