--- a/VirtualMaid/src/main/webapp/EDUKIAK/ESTILOA/historiala.css
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/ESTILOA/historiala.css
@@ -51,7 +51,7 @@
 	width: 451px;
     height: 51px;
     
-    z-index: 3;
+    z-index: -3;
     
     left: -1px;
     box-shadow: 0 10px 20px rgb(0 0 0 / 10%), inset 0 -3px 0 rgb(0 0 0 / 20%);
@@ -60,7 +60,10 @@
 }
 .botoias{
 	
+	font-family: "Source Sans Pro", sans-serif;
 	font-size: 1.4rem;
+	font-weight: bold;
+	color: white;
     opacity: .7;
     line-height: 1.2;
     margin-bottom: .2em;
@@ -71,7 +74,9 @@
 	display: block;
     color: white;
     font-weight: bold;
-        font-size: 2rem;
+    font-size: 2rem;
+    position: relative;
+  	z-index: 0;
 }
 .elemento {
   margin-top: 500px;
