--- a/VirtualMaid/src/main/webapp/EDUKIAK/ESTILOA/informea.css
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/ESTILOA/informea.css
@@ -42,8 +42,12 @@ form, h1, h2 {
 	
 }
 .menuNagusirakoBotoiaInput:hover{
-	background-color: inherit;	
+	background-color: #ffffff; 
+	border: 1px solid #707070;
 	color: black;
+}
+.menuNagusirakoBotoia:hover{
+	background-color: #ffffff; 
 }
 .container {
     display: flex;
